appId: ${APP_ID}
#  Nest PagerView Example tab is active and accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Nested PagerView Example'
- assertVisible: '7 likes'
