appId: ${APP_ID}
# Vertical Basic Example tab is active and accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Vertical Basic Example'
- assertVisible: '7 likes'
