appId: ${APP_ID}
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'MaterialTopBarExample'
- extendedWaitUntil:
    visible:
      id: 'material-top-bar-pre-auth-screen'
    timeout: 10000
- assertVisible:
    id: 'material-top-bar-login-button'
