appId: ${APP_ID}
#  tc71 Page 1 all elements are visible and displayed correctly
---
- launchApp
#- assertVisible: "PagerView Example"
- tapOn: 'Pagination Dots Example'
- assertVisible: 'Pagination Dots Example'
#- assertVisible: "PagerView Example"
- assertVisible: 'Page Index: 1'
- assertVisible: 'Expanding Dot'
- assertVisible: 'Scaling Dot'
- assertVisible: 'Sliding Border'
- assertVisible: 'Sliding Dot'
